tests/integration/snapshots/integration__parse_failure__unexpected_escaped_character.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 

stdout --- 
<empty>
stderr --- 
error: unexpected character `\u000B`. expected start of a json value
 --> stdin:1:1
  |
1 | â‹
  | ^
